--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -31,7 +31,7 @@ html
             ul.nav.navbar-nav.navbar-right
               if account
                 li
-                  a(href='/account/setting/')= account.username
+                  a(href='/account/preferences/')= account.username
                 li
                   a(href='/panel/')= t('panel.')
                 if app.models.mAccount.inGroup(account, 'root')
