--- a/core/view/panel/pay.jade
+++ b/core/view/panel/pay.jade
@@ -1,31 +1,31 @@
 extends ../layout
 
 prepend header
-  title 充值 | #{config.web.name}
+  title #{t('common.charge')} | #{config.web.name}
 
 append header
   link(rel='stylesheet', href='/style/panel/pay.css')
 
 block main
   .row
-    header 充值
+    header= t('common.charge')
 
     for payment_method in payment_methods
       != payment_method
 
   .row
-    header 充值记录
+    header= t('view.pay.pay_log')
     table.table.table-hover
       thead
         tr
-          th 时间
-          th 金额
-          th 方式
+          th= t('common.time')
+          th= t('common.amount')
+          th= t('view.pay.pay_method')
       tbody
         for item in deposit_log
           tr
             td= moment(item.created_at).format('YYYY-MM-DD HH:mm:ss')
-            td #{item.amount.toFixed(2)} CNY
+            td #{item.amount.toFixed(2)} #{t('plan.currency.' + config.billing.currency)}
             if item.attribute.type == 'taobao'
               td 淘宝支付 订单号：#{item.attribute.order_id}
             else if item.attribute.type == 'bitcoin'
@@ -36,13 +36,12 @@ block main
               td #{item.attribute.type} #{item.attribute.order_id}
 
   .row
-    header 扣费记录
+    header= t('view.pay.billing_log')
     table.table.table-hover
       thead
         tr
-          td 时间
-          td 金额
-          td 摘要
+          td= t('common.time')
+          td= t('common.amount')
       tbody
         for item in billing_log
           tr
