--- a/plugin/bitcoin/view/payment_method.jade
+++ b/plugin/bitcoin/view/payment_method.jade
@@ -1,5 +1,5 @@
 div
-  h2= account.t('plugins.bitcoin.')
-  p= account.t('plugins.bitcoin.view.payment_tips')
-  p= account.t('plugins.bitcoin.view.exchange_rate_tips', {rate10: (exchange_rate * 10).toFixed(4)})
+  h2= t('')
+  p= t('view.payment_tips')
+  p= t('view.exchange_rate_tips', {rate10: (exchange_rate * 10).toFixed(4)})
   pre= account.pluggable.bitcoin.bitcoin_deposit_address
