--- a/core/static/style/panel.less
+++ b/core/static/style/panel.less
@@ -4,11 +4,13 @@
   }
 }
 
-.btn {
-  margin-right: 5px;
-}
-
 .table.plan-list tr :last-child {
   text-align: right;
   margin-right: 50px;
+}
+
+#sidebar {
+  a.btn {
+    width: 90px;
+  }
 }
