--- a/core/static/style/layout.less
+++ b/core/static/style/layout.less
@@ -1,5 +1,5 @@
 body {
-  padding-top: 70px;
+  padding-top: 50px;
   font-family: "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Microsoft YaHei", arial, sans-serif;
   font-size: 16px;
 
@@ -27,6 +27,8 @@ body {
   }
 
   #content {
+    margin: 20px auto;
+
     header {
       margin-bottom: 10px;
       padding-bottom: 10px;
@@ -52,8 +54,7 @@ body {
       padding-left: 15px;
 
       .row {
-        margin-left: 0;
-        margin-bottom: 20px;
+        margin: 0 0 20px;
 
         header {
           font-size: 22px;
