fixbugs in linux plugin

--- a/core/view/account/preferences.jade
+++ b/core/view/account/preferences.jade
@@ -10,7 +10,7 @@ block main
       .form-group
         label.col-sm-2.col-md-offset-1.control-label= t('view.preferences.qq')
         .col-sm-5
-          input.input-qq.form-control(type='text', value=account.settings.qq)
+          input.input-qq.form-control(type='text', value=account.preferences.qq)
       .form-group
         .col-sm-offset-3
           button.action-save.btn.btn-lg.btn-success(type='button')= t('common.save')
