--- a/plugin/linux/static/style/panel.less
+++ b/plugin/linux/static/style/panel.less
@@ -1,5 +1,11 @@
-td {
-  .progress {
-    margin-bottom: 0;
+.linux-widget-table {
+  tr td:first-child {
+    width: 200px;
+  }
+
+  td {
+    .progress {
+      margin-bottom: 0;
+    }
   }
 }
