use supertest for router test

--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('account.login')} | #{config.web.name}
+  title #{t('account.login')} | #{t(config.web.t_name)}
 
 block main
   header= t('account.login')
