--- a/core/view/account/preferences.jade
+++ b/core/view/account/preferences.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('account.preferences')} | #{config.web.name}
+  title #{t('account.preferences')} | #{t(config.web.t_name)}
 
 block main
   .row
