--- a/core/view/account/register.jade
+++ b/core/view/account/register.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('account.register')} | #{config.web.name}
+  title #{t('account.register')} | #{t(config.web.t_name)}
 
 block main
   header= t('account.register')
