--- a/core/view/panel/pay.jade
+++ b/core/view/panel/pay.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('common.charge')} | #{config.web.name}
+  title #{t('common.charge')} | #{t(config.web.t_name)}
 
 block main
   .row
