--- a/core/template/ticket_create_email.html
+++ b/core/template/ticket_create_email.html
@@ -5,4 +5,4 @@
 Created by <%= account.username %> at <%= ticket.created_at %>, View ticket:
 <a href='<%= config.web.url %>/ticket/view/?id=<%= ticket._id %>'><%= ticket._id %></a>
 <br />
-Notice from <%= config.web.name %>.
+Notice from <%= t(config.web.t_name) %>.
