--- a/core/view/admin.jade
+++ b/core/view/admin.jade
@@ -1,7 +1,7 @@
 extends layout
 
 prepend header
-  title #{t('admin.admin_panel')} | #{config.web.name}
+  title #{t('admin.admin_panel')} | #{t(config.web.t_name)}
 
 append header
   link(rel='stylesheet', href='/style/admin.css')
