--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('ticket.create_ticket')} | #{config.web.name}
+  title #{t('ticket.create_ticket')} | #{t(config.web.t_name)}
 
 append header
   link(rel='stylesheet', href='/style/ticket.css')
