--- a/plugin/rpvhost/view/index.jade
+++ b/plugin/rpvhost/view/index.jade
@@ -1,7 +1,7 @@
 extends ../../../core/view/layout
 
 prepend header
-  title RP 主机：Linux 虚拟主机 | #{t('app.name')}
+  title RP 主机：Linux 虚拟主机 | #{t(config.web.t_name)}
 
 append header
   link(rel='stylesheet', href='/plugin/rpvhost/style/index.css')
