--- a/core/view/account/preferences.jade
+++ b/core/view/account/preferences.jade
@@ -30,9 +30,9 @@ block main
     header= t('view.preferences.update_password')
     form.form-password.form-horizontal
       .form-group
-        label.col-sm-2.col-md-offset-1.control-label= t('view.preferences.old_password')
+        label.col-sm-2.col-md-offset-1.control-label= t('view.preferences.original_password')
         .col-sm-5
-          input.input-old_password.form-control(type='password')
+          input.input-original_password.form-control(type='password')
       .form-group
         label.col-sm-2.col-md-offset-1.control-label= t('view.preferences.new_password')
         .col-sm-5
