--- a/core/view/ticket/list.jade
+++ b/core/view/ticket/list.jade
@@ -26,7 +26,7 @@ mixin displayTicketsTable(status, tickets)
       for ticket in tickets
         tr(data-id='#{ticket._id}')
           td
-            a(href='/ticket/view/?id=#{ticket._id}')= ticket.title
+            a(href='/ticket/view/#{ticket._id}')= ticket.title
           td
             mixin displayTicketStatus(ticket.status)
 
