--- a/plugin/nginx/view/widget.jade
+++ b/plugin/nginx/view/widget.jade
@@ -16,7 +16,7 @@ table.table.table-hover
           button.btn.btn-info.btn-xs
             span.glyphicon.glyphicon-edit
           button.btn.btn-danger.btn-xs
-            span.glyphicon.glyphicon-remove-sign
+            span.glyphicon.glyphicon-trash
 
 .modal.fade#nginx-modal(tabindex='-1', role='dialog', aria-hidden='true')
   .modal-dialog
@@ -94,5 +94,4 @@ table.table.table-hover
           span.glyphicon.glyphicon-warning-sign
           | &nbsp;
           span.json-error.text-danger 错误信息
-        button.btn.btn-danger(type='button', data-dismiss='modal') 关闭
         button.btn.btn-success(type='button') 保存
